--- a/static-dev/dev/index/css/index.scss
+++ b/static-dev/dev/index/css/index.scss
@@ -38,7 +38,7 @@ body{
 }
 .index-top{
 	overflow: hidden;
-	background:url("/images/index1.jpg") #fff no-repeat;
+	background-color: #fff ;
 	background-size:100% 100%;
 	height:0px;
 	padding-top:12%;
@@ -89,11 +89,11 @@ body{
 100%{ top:0px;right:0px;}
 }
 
-.index-list .row{
+.index-list .ant-row{
 	margin-top:20px;
 	display: -webkit-box;
 }
-.index-list .col-6{
+.index-list .ant-col-6{
 	padding:10px;
 	background: #fff;
 	border-radius: 5px;
